istio-setup/book-info-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,continuationtoken
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: letsencrypt-istioaks
    
spec:
  ingressClassName: nginx 
  tls:
    - hosts:
      - istioaks.centralindia.cloudapp.azure.com
      secretName: tls-secret
  rules:
        
  - host: "istioaks.centralindia.cloudapp.azure.com"
    http:
      paths:
      - pathType: Prefix
        path: /productpage
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - pathType: Prefix
        path: /static
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - pathType: Prefix
        path: /login
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - pathType: Prefix
        path: /logout
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - pathType: Prefix
        path: /api/v1/products
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - pathType: Prefix
        path: /reviews
        backend:
          service:
            name: reviews
            port:
              number: 9080
